...
  
  var body: some View {
    Group {
      if vm.isInitialLoading {
        VStack {
          Spacer()
          ProgressView("Initializing the app...")
            .progressViewStyle(CircularProgressViewStyle(tint: Color(.systemBlue)))
          Spacer()
        }
        .onAppear {
          Task { await vm.handleOnAppear() }
        }
...
            onSelectedItem: { city in
              selectedCity = city
            }
          )
          .padding(.top, 8)
          
          Toggle("Search Favorites Only", isOn: $vm.searchFavoritesOnly)
            .padding(.horizontal)
          
          ScrollView {
            LazyVStack(spacing: 8) {
              if vm.noMatchesFound {
                ContentUnavailableView.search
...
